<?xml version="1.0"?>
<package format="2">
  <name>joystick</name>
  <version>0.0.0</version>
  <description>The joystick_pkg package publishes ds4 msgs via ds4_driver to a specific topic</description>
  <maintainer email="lucaslinssouza@gmail.com">lucas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>ds4_driver</build_depend>
  <exec_depend>ds4_driver</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
